--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
         <li><a href="#">Services</a></li>
+        <li><a href="#">Advanced</a></li>
         <li><a href="#">Gallery</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
-    <!-- Bulb Button -->
-    <button id="bw-toggle" aria-label="Toggle black and white mode" title="Toggle black and white mode">
-      <img src="images/bulb-icon.png" alt="Toggle Black & White" style="width:24px; height:24px;" />
-    </button>
+  
   </header>
 
   <!-- Carousel Section -->
@@ -33,7 +32,7 @@
 
     <div class="slides">
       <div class="slide first">
-        <img src="gallery1.jpg" alt="Gallery 1" />
+        <img src="gallary.jpg" alt="Gallery 1" />
       </div>
       <div class="slide">
         <img src="gallery2.jpg" alt="Gallery 2" />
@@ -86,6 +85,9 @@
       <input type="radio" name="tabs" id="tab2" />
       <label for="tab1" class="tab-label">Depilation</label>
       <label for="tab2" class="tab-label">Eyelash Extension</label>
+      <label for="tab3" class="tab-label">Make Up</label>
+      <label for="tab4" class="tab-label">Nail Care</label>
+      <label for="tab5" class="tab-label">Haircut</label>
 
       <div class="tab-content" id="content1">
         <div class="advanced-grid">
@@ -136,33 +138,62 @@
     </div>
   </section>
 
-  <!-- Contact Us Form -->
-  <section class="contact-us">
-    <h2>Contact Us</h2>
-    <form id="contact-form" action="#" method="post">
-      <div class="form-group">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" placeholder="Your full name" required />
-      </div>
-      <div class="form-group">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" placeholder="your.email@example.com" required />
-      </div>
-      <div class="form-group">
-        <label for="message">Message:</label>
-        <textarea id="message" name="message" rows="5" placeholder="Your message here..." required></textarea>
-      </div>
-      <button type="submit" class="submit-btn">Send Message</button>
-    </form>
-  </section>
+ <!-- Contact Us Form -->
+<section class="contact-us">
+  <h2>Book an Appointment</h2>
+  <form id="contact-form" action="#" method="post">
+    <div class="form-group">
+      <label for="name">Full Name:</label>
+      <input type="text" id="name" name="name" placeholder="Your full name" required />
+    </div>
+    
+    <div class="form-group">
+      <label for="phone">Contact Number:</label>
+      <input type="tel" id="phone" name="phone" placeholder="98XXXXXXXX" required />
+    </div>
 
-  <script>
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" placeholder="your.email@example.com" required />
+    </div>
+
+    <div class="form-group">
+      <label for="address">Full Address:</label>
+      <input type="text" id="address" name="address" placeholder="Your complete address" required />
+    </div>
+
+    <div class="form-group">
+      <label for="occasion">Occasion:</label>
+      <select id="occasion" name="occasion" required>
+        <option value="">-- Select Occasion --</option>
+        <option value="wedding">Wedding</option>
+        <option value="party">Party</option>
+        <option value="photo-shoot">Photo Shoot</option>
+        <option value="festive">Festive/Event</option>
+        <option value="other">Other</option>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <label for="date">Preferred Date:</label>
+      <input type="date" id="date" name="date" required />
+    </div>
+
+    <div class="form-group">
+      <label for="message">Additional Notes / Message:</label>
+      <textarea id="message" name="message" rows="5" placeholder="Your message here..." required></textarea>
+    </div>
+
+    <button type="submit" class="submit-btn">Send Message</button>
+  </form>
+</section>
+  <!-- <script>
     // Black & White Mode Toggle
     const toggleBtn = document.getElementById('bw-toggle');
     toggleBtn.addEventListener('click', () => {
       document.body.classList.toggle('bw-mode');
     });
-  </script>
+  </script> -->
 
 </body>
 </html>
